--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
     "buildCommand": "cd front-end && npm install && npm run build",
     "outputDirectory" : "front-end/dist",
-    "framework":"vite",
-    "rewrites":[
-        {
-            "source":"/api/(.*)",
-            "destination": "/api/index.js"
-        }
-    ] 
+    "framework":"vite"
 }
