--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
     "buildCommand": "cd front-end && npm install && npm run build",
     "outputDirectory" : "front-end/dist",
-    "framework":"vite"
+    "framework":"vite",
+    "rewrites":  [
+        {"source": "/(.*)", "destination": "/"}
+      ]
 }
