--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
     "buildCommand": "cd front-end && npm install && npm run build",
     "outputDirectory" : "front-end/dist",
     "framework":"vite",
-    "rewrites":  [
-        {"source": "/(.*)", "destination": "/"},
-        {"source": "/api/(.*)", "destination": "/"}
+    "rewrites": [
+        {"source": "^/api/(.*)", "destination": "/api/$1"},
+        {"source": "^(.*)", "destination": "/$1"}
       ]
 }
